--- a/templates/static/css/style.css
+++ b/templates/static/css/style.css
@@ -129,6 +129,7 @@ a {
       z-index: 2;
       max-width: 780px;
       left: -20px; }
+      border-radius: 10px; /* Opcional: Adiciona cantos arredondados */
       @media (min-width: 768px) {
         .hero .hero-img-wrap img {
           right: 0px;
@@ -136,14 +137,19 @@ a {
       @media (min-width: 992px) {
         .hero .hero-img-wrap img {
           left: 0px;
-          top: -80px;
+          top: -90px;
+           border-radius: 40px; /* Opcional: Adiciona cantos arredondados */
           position: absolute;
           right: -50px; } }
+          border-radius: 10px; /* Opcional: Adiciona cantos arredondados */
       @media (min-width: 1200px) {
         .hero .hero-img-wrap img {
           left: 0px;
           top: -80px;
-          right: -100px; } }
+          right: -100px;
+          border-radius: 10px; /* Opcional: Adiciona cantos arredondados */
+           } }
+
     .hero .hero-img-wrap:after {
       content: "";
       position: absolute;
@@ -709,3 +715,10 @@ textarea {
     height: 50px;
     border-radius: 50%;
     background: rgba(59, 93, 80, 0.2); }
+
+.carousel-inner img {
+    width: 100%;
+    height: 400px; /* Ajuste a altura conforme necessário */
+    object-fit: cover;
+    border-radius: 40px; /* Ajuste o valor para arredondar as bordas conforme desejado */
+}
