--- a/templates/login.html
+++ b/templates/login.html
@@ -1,1 +1,31 @@
- {{ form }}
+{% load static %}
+<form method="post" class="mt-4 mx-auto text-center" style="max-width: 400px;">
+  {% csrf_token %}
+  <div class="form-group">
+    <label for="id_username" class="text-left">Username:</label>
+    <input type="text" class="form-control" id="id_username" name="username">
+    {% for error in form.username.errors %}
+      <div class="invalid-feedback">
+        {{ error }}
+      </div>
+    {% endfor %}
+  </div>
+  <div class="form-group">
+    <label for="id_password" class="text-left">Password:</label>
+    <input type="password" class="form-control" id="id_password" name="password">
+    {% for error in form.password.errors %}
+      <div class="invalid-feedback">
+        {{ error }}
+      </div>
+    {% endfor %}
+    <br>
+  </div>
+  <div class="form-group">
+    <button type="submit" class="btn btn-primary">Login</button>
+  </div>
+</form>
+
+<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+<link href="{% static 'css/tiny-slider.css' %}" rel="stylesheet">
+<link href="{% static 'css/style.css' %}" rel="stylesheet">
