--- a/templates/logout.html
+++ b/templates/logout.html
@@ -9,6 +9,6 @@
     <h1>Logout</h1>
     <p>Você fez logout com sucesso.</p>
     <p>Obrigado por usar nosso serviço.</p>
-    <p><a href="{% url 'home' %}">Voltar para a página inicial</a></p>
+    <p><a href="mainpage">Voltar para a página inicial</a></p>
 </body>
 </html>
