--- a/apps/administracao/templates/administracao/reserva_form.html
+++ b/apps/administracao/templates/administracao/reserva_form.html
@@ -22,7 +22,20 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
+	<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+
+  <!--
   <meta name="description" content="" />
   <meta name="keywords" content="bootstrap, bootstrap4" />
 
@@ -97,26 +110,32 @@
 				</div>
 			</div>
 		<!-- End Hero Section -->
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
 <form method="POST" class="custom-form">
     {% csrf_token %}
 
-	<label for="apartamento">Apartamento:</label>
- 			{{ form.apartamento }}>
-		<label >Valor Diária:</label>
-    	{{ form.valor }}
-
+    <label for="apartamento">Apartamento:</label>
+    {{ form.apartamento }}
+    <label for="valor">Valor Diária:</label>
+    {{ form.valor }}
 
     <label for="dataEntrada">Data de entrada:</label>
-        <input type="date" id="dataEntrada" name="dataEntrada" value="{{ form.dataEntrada }}" >
-    <label for="dataSaida">Data de Saída:</label>
-        <input type="date" id="dataSaida" name="dataSaida" value="{{ form.dataSaida }}">
-    <label for="codigo_cupom">Código do Cupom:</label>
-		<input type="text" id="codigo_cupom" name="codigo_cupom">
-    <button type="submit" class="btn btn-info">Realizar Pagamento!</button>
+	<select id="dataEntrada" name="dataEntrada"></select>
 
+
+    <label for="dataSaida">Data de Saída:</label>
+    <select id="dataSaida" name="dataSaida">
+        <!-- Opções de data de saída serão preenchidas dinamicamente -->
+    </select>
+
+    <label for="codigo_cupom">Código do Cupom:</label>
+    <input type="text" id="codigo_cupom" name="codigo_cupom">
+    <button type="submit" class="btn btn-info">Realizar Pagamento!</button>
 </form>
+
+
 
 		<!-- Start Footer Section -->
 		<footer class="footer-section">
@@ -224,7 +243,7 @@
 		<!-- End Footer Section -->
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 
 
 <script>
@@ -237,6 +256,16 @@ $(document).ready(function () {
             dataType: 'json',
             success: function (data) {
                 $('#id_valor').val(data.valor);
+                // Limpar e atualizar as datas disponíveis para data de entrada
+                $('#dataEntrada').empty();
+                data.datas_disponiveis.forEach(function(date) {
+                    $('#dataEntrada').append('<option value="' + date + '">' + date + '</option>');
+                });
+                // Limpar e atualizar as datas disponíveis para data de saída
+                $('#dataSaida').empty();
+                data.datas_disponiveis.forEach(function(date) {
+                    $('#dataSaida').append('<option value="' + date + '">' + date + '</option>');
+                });
             }
         });
     });
