--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -88,7 +88,7 @@
                 <img src="{% static 'images/vistapousada.png' %}" class="d-block w-100" alt="Image 2">
             </div>
             <div class="carousel-item">
-                <img src="{% static 'images/quarto1.png' %}" class="d-block w-100" alt="Image 3">
+                <img src="{% static 'images/praiaCampeche.png' %}" class="d-block w-100" alt="Image 3">
             </div>
         </div>
     </div>
@@ -105,18 +105,18 @@
 
 					<!-- Start Column 1 -->
 					<div class="col-md-12 col-lg-3 mb-5 mb-lg-0">
-						<h2 class="mb-4 section-title">Crafted with excellent material.</h2>
-						<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. </p>
-						<p><a href="shop.html" class="btn">Explore</a></p>
+						<h2 class="mb-4 section-title">Confira nossas opções.</h2>
+						<p class="mb-4">Possuimos opções de quartos com 1 ou 2 dormitórios, com camas de casal e solteiro, além de salão de festas e churrasqueiras. </p>
+						<p><a href="shop.html" class="btn">Conferir</a></p>
 					</div> 
 					<!-- End Column 1 -->
 
 					<!-- Start Column 2 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 						<a class="product-item" href="cart.html">
-							<img src="{% static 'images/product-1.png' %}" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Nordic Chair</h3>
-							<strong class="product-price">$50.00</strong>
+							<img src="{% static 'images/quarto.png' %}" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Apartamento 2 Dormitórios</h3>
+
 
 							<span class="icon-cross">
 								<img src="{% static 'images/cross.svg' %}" class="img-fluid">
@@ -128,9 +128,9 @@
 					<!-- Start Column 3 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 						<a class="product-item" href="cart.html">
-							<img src="{% static 'images/product-2.png'%}" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Kruzo Aero Chair</h3>
-							<strong class="product-price">$78.00</strong>
+							<img src="{% static 'images/casal2.png'%}" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Apartamento 1 Dormitório</h3>
+
 
 							<span class="icon-cross">
 								<img src="{% static 'images/cross.svg'%}" class="img-fluid">
@@ -142,9 +142,9 @@
 					<!-- Start Column 4 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 						<a class="product-item" href="cart.html">
-							<img src="{% static 'images/product-3.png'%}" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Ergonomic Chair</h3>
-							<strong class="product-price">$43.00</strong>
+							<img src="{% static 'images/salaofestas.png'%}" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Salão de Festas</h3>
+
 
 							<span class="icon-cross">
 								<img src="{% static 'images/cross.svg'%}" class="img-fluid">
@@ -164,7 +164,7 @@
 				<div class="row justify-content-between">
 					<div class="col-lg-6">
 						<h2 class="section-title">Why Choose Us</h2>
-						<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
+						<p>Possuimos opções de quartos com 1 ou 2 dormitórios, com camas de casal e solteiro, salão de festas e churrasqueiras.</p>
 
 						<div class="row my-5">
 							<div class="col-6 col-md-6">
@@ -173,7 +173,7 @@
 										<img src="{% static 'images/truck.svg'%}" alt="Image" class="imf-fluid">
 									</div>
 									<h3>Fast &amp; Free Shipping</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<p>Possuimos opções de quartos com 1 ou 2 dormitórios, com camas de casal e solteiro, alem de salão de festas e churrasqueiras.</p>
 								</div>
 							</div>
 
