--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -32,7 +32,7 @@
 		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
 
 			<div class="container">
-				<a class="navbar-brand" href="index.html">Pousada Campeche<span>.</span></a>
+				<a class="navbar-brand" href="index.html">Pousada Praia Campeche<span>.</span></a>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -115,6 +115,8 @@
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 						<a class="product-item" href="cart.html">
 							<img src="{% static 'images/quarto.png' %}" class="img-fluid product-thumbnail">
+
+
 							<h3 class="product-title">Apartamento 2 Dormitórios</h3>
 
 
@@ -122,13 +124,14 @@
 								<img src="{% static 'images/cross.svg' %}" class="img-fluid">
 							</span>
 						</a>
-					</div> 
+					</div>
 					<!-- End Column 2 -->
 
 					<!-- Start Column 3 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 						<a class="product-item" href="cart.html">
 							<img src="{% static 'images/casal2.png'%}" class="img-fluid product-thumbnail">
+
 							<h3 class="product-title">Apartamento 1 Dormitório</h3>
 
 
@@ -155,16 +158,29 @@
 
 				</div>
 			</div>
+				<div class="map-container">
+					<div class="map">
+						<h5>Apartamento 2 Dormitórios</h5>
+						<iframe src="https://www.google.com/maps/embed?pb=!4v1717437633674!6m8!1m7!1sCAoSLEFGMVFpcE1Cal9fZWNKMzItMlRJc0FXTFlGVF9UZWFQR3JEMWJUb1JsOGJZ!2m2!1d-27.69656280888119!2d-48.49064570692042!3f256.690259998553!4f-16.69541263605373!5f0.7820865974627469" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+					</div>
+					<div class="map">
+						<h5>Apartamento 1 Dormitório</h5>
+						<iframe src="https://www.google.com/maps/embed?pb=!4v1717437252057!6m8!1m7!1sCAoSLEFGMVFpcE1IMmpwRW04RHRyVkNCeUNGSE9ubHMtQmJ0cElONlY2c3BzVUtU!2m2!1d-27.69661605066751!2d-48.49074557882193!3f278.8445192940251!4f-20.668719475069977!5f0.7820865974627469" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+					</div>
+				</div>
+
 		</div>
-		<!-- End Product Section -->
+
+
 
 		<!-- Start Why Choose Us Section -->
 		<div class="why-choose-section">
 			<div class="container">
 				<div class="row justify-content-between">
 					<div class="col-lg-6">
-						<h2 class="section-title">Why Choose Us</h2>
-						<p>Possuimos opções de quartos com 1 ou 2 dormitórios, com camas de casal e solteiro, salão de festas e churrasqueiras.</p>
+						<h2 class="section-title">Serviços e equipamentos</h2>
+						<p>A Pousada Praia Campeche possui (08) apartamentos de um dormitório, que abrigam até três pessoas, e (02) apartamentos de dois dormitórios, que abrigam até cinco pessoas.
+Todos os apartamentos com Quartos equipados com cama king-size, guarda roupas, Smart TV 32, ventilador de teto, sala de estar com telefone, sofá cama Cozinha com mesa e cadeiras totalmente equipada com louças e eletrodomésticos (geladeira, fogão, liquidificador e sanduicheira), Varanda privativas com cadeiras.</p>
 
 						<div class="row my-5">
 							<div class="col-6 col-md-6">
@@ -172,8 +188,8 @@
 									<div class="icon">
 										<img src="{% static 'images/truck.svg'%}" alt="Image" class="imf-fluid">
 									</div>
-									<h3>Fast &amp; Free Shipping</h3>
-									<p>Possuimos opções de quartos com 1 ou 2 dormitórios, com camas de casal e solteiro, alem de salão de festas e churrasqueiras.</p>
+									<h3>Estacionamento</h3>
+									<p>Estacionamento no pátio da pousada.</p>
 								</div>
 							</div>
 
@@ -182,8 +198,8 @@
 									<div class="icon">
 										<img src="{% static 'images/bag.svg'%}" alt="Image" class="imf-fluid">
 									</div>
-									<h3>Easy to Shop</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<h3>Parcerias com cormécios locais</h3>
+									<p>Possuímos parcerias exclusivas com cormercio local.</p>
 								</div>
 							</div>
 
@@ -192,8 +208,8 @@
 									<div class="icon">
 										<img src="{% static 'images/support.svg'%}" alt="Image" class="imf-fluid">
 									</div>
-									<h3>24/7 Support</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<h3>Serviço de Higenização</h3>
+									<p>Serviço de Camareira para limpeza do Apartamento.</p>
 								</div>
 							</div>
 
@@ -202,8 +218,8 @@
 									<div class="icon">
 										<img src="{% static 'images/return.svg'%}" alt="Image" class="imf-fluid">
 									</div>
-									<h3>Hassle Free Returns</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<h3>Trocas Lençois</h3>
+									<p>Troca de Lençóis a cada 03 (três) dias de hospedagem.</p>
 								</div>
 							</div>
 
@@ -212,7 +228,7 @@
 
 					<div class="col-lg-5">
 						<div class="img-wrap">
-							<img src="{% static 'images/why-choose-us-img.jpg' %}" alt="Image" class="img-fluid">
+							<img src="{% static 'images/fotop.png' %}" alt="Image" class="img-fluid">
 						</div>
 					</div>
 
@@ -227,13 +243,13 @@
 				<div class="row justify-content-between">
 					<div class="col-lg-7 mb-5 mb-lg-0">
 						<div class="imgs-grid">
-							<div class="grid grid-1"><img src="{% static 'images/img-grid-1.jpg'%}" alt="Untree.co"></div>
-							<div class="grid grid-2"><img src="{% static 'images/img-grid-2.jpg'%}" alt="Untree.co"></div>
-							<div class="grid grid-3"><img src="{% static 'images/img-grid-3.jpg'%}" alt="Untree.co"></div>
+							<div class="grid grid-1"><img src="{% static 'images/praia.jpeg'%}" alt="Untree.co"></div>
+							<div class="grid grid-3"><img src="{% static 'images/50metros.png'%}" alt="Untree.co"></div>
+
 						</div>
 					</div>
 					<div class="col-lg-5 ps-lg-5">
-						<h2 class="section-title mb-4">We Help You Make Modern Interior Design</h2>
+						<h2 class="section-title mb-4">Praia Campeche</h2>
 						<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada</p>
 
 						<ul class="list-unstyled custom-list my-4">
@@ -248,8 +264,6 @@
 			</div>
 		</div>
 		<!-- End We Help Section -->
-
-		<!-- Start Popular Product -->
 		<div class="popular-product">
 			<div class="container">
 				<div class="row">
