--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -32,7 +32,7 @@
 		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
 
 			<div class="container">
-				<a class="navbar-brand" href="index.html">Pousada Praia Campeche<span>.</span></a>
+				<a class="navbar-brand"  href="" ><img src="{% static 'images/logo.png' %}"></a>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -58,7 +58,7 @@
                         {% endif %}
 				</div>
 			</div>
-				
+
 		</nav>
 		<!-- End Header/Navigation -->
 
@@ -69,7 +69,9 @@
 						<div class="col-lg-5">
 							<div class="intro-excerpt">
 								<h1>Venha Desfrutar <span clsas="d-block">Do Paraiso</span></h1>
-								<p class="mb-4">De frente para a ilha do campeche.</p>
+								<p class="mb-4">Encontrar uma pousada famíliar em Campeche não precisa ser complicado. Receba as boas-vindas da Pousada Praia Campeche, uma boa opção para viajantes como você.
+												Você vai desfrutar de um quarto com uma atmosfera relaxante, que conta com apartamento completo.
+								</p>
 								<p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#" class="btn btn-white-outline">Explore</a></p>
 							</div>
 						</div>
@@ -180,7 +182,8 @@
 					<div class="col-lg-6">
 						<h2 class="section-title">Serviços e equipamentos</h2>
 						<p>A Pousada Praia Campeche possui (08) apartamentos de um dormitório, que abrigam até três pessoas, e (02) apartamentos de dois dormitórios, que abrigam até cinco pessoas.
-Todos os apartamentos com Quartos equipados com cama king-size, guarda roupas, Smart TV 32, ventilador de teto, sala de estar com telefone, sofá cama Cozinha com mesa e cadeiras totalmente equipada com louças e eletrodomésticos (geladeira, fogão, liquidificador e sanduicheira), Varanda privativas com cadeiras.</p>
+							Todos os apartamentos com Quartos equipados com cama king-size, guarda roupas, Smart TV 32, ventilador de teto, sala de estar com telefone, sofá cama Cozinha com mesa e cadeiras totalmente equipada com louças e eletrodomésticos (geladeira, fogão, liquidificador e sanduicheira), Varanda privativas com cadeiras.
+							Além disso, a conexão à internet não será problema durante a estadia, pois a Pousada Praia Campeche oferece wi-fi gratuito aos hóspedes.</p>
 
 						<div class="row my-5">
 							<div class="col-6 col-md-6">
@@ -198,8 +201,8 @@ Todos os apartamentos com Quartos equipados com cama king-size, guarda roupas, S
 									<div class="icon">
 										<img src="{% static 'images/bag.svg'%}" alt="Image" class="imf-fluid">
 									</div>
-									<h3>Parcerias com cormécios locais</h3>
-									<p>Possuímos parcerias exclusivas com cormercio local.</p>
+									<h3>Atendimento familiar</h3>
+									<p>Atendimento familiar para que você se sinta inteiramente à vontade em nossa pousada.</p>
 								</div>
 							</div>
 
@@ -250,13 +253,15 @@ Todos os apartamentos com Quartos equipados com cama king-size, guarda roupas, S
 					</div>
 					<div class="col-lg-5 ps-lg-5">
 						<h2 class="section-title mb-4">Praia Campeche</h2>
-						<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada</p>
+						<p>A Praia do Campeche tem 5600 metros de extensão e fica entre a badalada praia da Joaquina e a bela praia do Morro das Pedras.
+						Possui águas e areias limpas, próprias para banho e prática de esportes como surf, bodyboard, sandboard, caminhadas, pesca, jogos de areia entre outros.
+						Também oferece, durante a temporada, opções de diversão como bares e restaurantes, muitos com música ao vivo, à beira da praia, a aproximadamente 1km da pousada. </p>
 
 						<ul class="list-unstyled custom-list my-4">
-							<li>Donec vitae odio quis nisl dapibus malesuada</li>
-							<li>Donec vitae odio quis nisl dapibus malesuada</li>
-							<li>Donec vitae odio quis nisl dapibus malesuada</li>
-							<li>Donec vitae odio quis nisl dapibus malesuada</li>
+							<li>Localização da Pousada Praia Campeche é em frente a Ilha do campeche.</li>
+							<li>A Iconica Lagoa da Chica encontrasse a 30 metros da Pousada.</li>
+							<li>A Pousada encontrasse em uma das ruas mais badaladas do campeche, Lomba do Sabão</li>
+							<li>Praia do Campeche possui uma Orla de extensão de 3 km localizada no Sul da Ilha de Florianópolis.</li>
 						</ul>
 						<p><a herf="#" class="btn">Explore</a></p>
 					</div>
@@ -312,247 +317,30 @@ Todos os apartamentos com Quartos equipados com cama king-size, guarda roupas, S
 		</div>
 		<!-- End Popular Product -->
 
-		<!-- Start Testimonial Slider -->
-		<div class="testimonial-section">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-7 mx-auto text-center">
-						<h2 class="section-title">Testimonials</h2>
-					</div>
-				</div>
 
-				<div class="row justify-content-center">
-					<div class="col-lg-12">
-						<div class="testimonial-slider-wrap text-center">
 
-							<div id="testimonial-nav">
-								<span class="prev" data-controls="prev"><span class="fa fa-chevron-left"></span></span>
-								<span class="next" data-controls="next"><span class="fa fa-chevron-right"></span></span>
-							</div>
+			<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+			<div class="elfsight-app-c55cb9e4-9591-4507-bd89-cce6fa599c2e" data-elfsight-app-lazy></div>
 
-							<div class="testimonial-slider">
-								
-								<div class="item">
-									<div class="row justify-content-center">
-										<div class="col-lg-8 mx-auto">
 
-											<div class="testimonial-block text-center">
-												<blockquote class="mb-5">
-													<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
-												</blockquote>
-
-												<div class="author-info">
-													<div class="author-pic">
-														<img src="{% static 'images/person-1.png'%}" alt="Maria Jones" class="img-fluid">
-													</div>
-													<h3 class="font-weight-bold">Maria Jones</h3>
-													<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
-												</div>
-											</div>
-
-										</div>
-									</div>
-								</div> 
-								<!-- END item -->
-
-								<div class="item">
-									<div class="row justify-content-center">
-										<div class="col-lg-8 mx-auto">
-
-											<div class="testimonial-block text-center">
-												<blockquote class="mb-5">
-													<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
-												</blockquote>
-
-												<div class="author-info">
-													<div class="author-pic">
-														<img src="{% static 'images/person-1.png'%}" alt="Maria Jones" class="img-fluid">
-													</div>
-													<h3 class="font-weight-bold">Maria Jones</h3>
-													<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
-												</div>
-											</div>
-
-										</div>
-									</div>
-								</div> 
-								<!-- END item -->
-
-								<div class="item">
-									<div class="row justify-content-center">
-										<div class="col-lg-8 mx-auto">
-
-											<div class="testimonial-block text-center">
-												<blockquote class="mb-5">
-													<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
-												</blockquote>
-
-												<div class="author-info">
-													<div class="author-pic">
-														<img src="{% static 'images/person-1.png'%}" alt="Maria Jones" class="img-fluid">
-													</div>
-													<h3 class="font-weight-bold">Maria Jones</h3>
-													<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
-												</div>
-											</div>
-
-										</div>
-									</div>
-								</div> 
-								<!-- END item -->
-
-							</div>
-
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- End Testimonial Slider -->
-
-		<!-- Start Blog Section -->
-		<div class="blog-section">
-			<div class="container">
-				<div class="row mb-5">
-					<div class="col-md-6">
-						<h2 class="section-title">Recent Blog</h2>
-					</div>
-					<div class="col-md-6 text-start text-md-end">
-						<a href="#" class="more">View All Posts</a>
-					</div>
-				</div>
-
-				<div class="row">
-
-					<div class="col-12 col-sm-6 col-md-4 mb-4 mb-md-0">
-						<div class="post-entry">
-							<a href="#" class="post-thumbnail"><img src="{% static 'images/post-1.jpg'%}" alt="Image" class="img-fluid"></a>
-							<div class="post-content-entry">
-								<h3><a href="#">First Time Home Owner Ideas</a></h3>
-								<div class="meta">
-									<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 19, 2021</a></span>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-12 col-sm-6 col-md-4 mb-4 mb-md-0">
-						<div class="post-entry">
-							<a href="#" class="post-thumbnail"><img src="{% static 'images/post-2.jpg'%}" alt="Image" class="img-fluid"></a>
-							<div class="post-content-entry">
-								<h3><a href="#">How To Keep Your Furniture Clean</a></h3>
-								<div class="meta">
-									<span>by <a href="#">Robert Fox</a></span> <span>on <a href="#">Dec 15, 2021</a></span>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-12 col-sm-6 col-md-4 mb-4 mb-md-0">
-						<div class="post-entry">
-							<a href="#" class="post-thumbnail"><img src="{% static 'images/post-3.jpg'%}" alt="Image" class="img-fluid"></a>
-							<div class="post-content-entry">
-								<h3><a href="#">Small Space Furniture Apartment Ideas</a></h3>
-								<div class="meta">
-									<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 12, 2021</a></span>
-								</div>
-							</div>
-						</div>
-					</div>
-
-				</div>
-			</div>
-		</div>
-		<!-- End Blog Section -->	
-
-		<!-- Start Footer Section -->
 		<footer class="footer-section">
 			<div class="container relative">
 
-				<div class="sofa-img">
-					<img src="{% static 'images/sofa.png'%}" alt="Image" class="img-fluid">
-				</div>
-
-				<div class="row">
-					<div class="col-lg-8">
-						<div class="subscription-form">
-							<h3 class="d-flex align-items-center"><span class="me-1"><img src="{% static 'images/envelope-outline.svg'%}" alt="Image" class="img-fluid"></span><span>Subscribe to Newsletter</span></h3>
-
-							<form action="#" class="row g-3">
-								<div class="col-auto">
-									<input type="text" class="form-control" placeholder="Enter your name">
-								</div>
-								<div class="col-auto">
-									<input type="email" class="form-control" placeholder="Enter your email">
-								</div>
-								<div class="col-auto">
-									<button class="btn btn-primary">
-										<span class="fa fa-paper-plane"></span>
-									</button>
-								</div>
-							</form>
-
-						</div>
-					</div>
-				</div>
 
 				<div class="row g-5 mb-5">
 					<div class="col-lg-4">
-						<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">Furni<span>.</span></a></div>
-						<p class="mb-4">Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant</p>
+						<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">Pousada Praia Campeche<span>.</span></a></div>
+					<p class="mb-4">Contatos: +55 48 3338 - 2026 / +55 48 3338 - 3471 </p>
+					<p class="mb-4">+55 48 9 9810 - 4098</p>
 
-						<ul class="list-unstyled custom-social">
-							<li><a href="#"><span class="fa fa-brands fa-facebook-f"></span></a></li>
-							<li><a href="#"><span class="fa fa-brands fa-twitter"></span></a></li>
-							<li><a href="#"><span class="fa fa-brands fa-instagram"></span></a></li>
-							<li><a href="#"><span class="fa fa-brands fa-linkedin"></span></a></li>
-						</ul>
-					</div>
 
-					<div class="col-lg-8">
-						<div class="row links-wrap">
-							<div class="col-6 col-sm-6 col-md-3">
-								<ul class="list-unstyled">
-									<li><a href="#">About us</a></li>
-									<li><a href="#">Services</a></li>
-									<li><a href="#">Blog</a></li>
-									<li><a href="#">Contact us</a></li>
-								</ul>
-							</div>
-
-							<div class="col-6 col-sm-6 col-md-3">
-								<ul class="list-unstyled">
-									<li><a href="#">Support</a></li>
-									<li><a href="#">Knowledge base</a></li>
-									<li><a href="#">Live chat</a></li>
-								</ul>
-							</div>
-
-							<div class="col-6 col-sm-6 col-md-3">
-								<ul class="list-unstyled">
-									<li><a href="#">Jobs</a></li>
-									<li><a href="#">Our team</a></li>
-									<li><a href="#">Leadership</a></li>
-									<li><a href="#">Privacy Policy</a></li>
-								</ul>
-							</div>
-
-							<div class="col-6 col-sm-6 col-md-3">
-								<ul class="list-unstyled">
-									<li><a href="#">Nordic Chair</a></li>
-									<li><a href="#">Kruzo Aero</a></li>
-									<li><a href="#">Ergonomic Chair</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
 
 				</div>
 
 				<div class="border-top copyright">
 					<div class="row pt-4">
 						<div class="col-lg-6">
-							<p class="mb-2 text-center text-lg-start">Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co">Untree.co</a> Distributed By <a hreff="https://themewagon.com">ThemeWagon</a>  <!-- License information: https://untree.co/license/ -->
+							<p class="mb-2 text-center text-lg-start">Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Pousda Praia Campeche</a>
             </p>
 						</div>
 
@@ -568,7 +356,7 @@ Todos os apartamentos com Quartos equipados com cama king-size, guarda roupas, S
 
 			</div>
 		</footer>
-		<!-- End Footer Section -->	
+
 
 
 		<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
